--- a/HardVoice/Base.lproj/Main.storyboard
+++ b/HardVoice/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Oym-bT-rco"/>
                     <connections>
-                        <segue destination="RHm-uL-Mz5" kind="presentation" identifier="goToMainScreen" id="3cK-UX-iAK"/>
+                        <segue destination="RHm-uL-Mz5" kind="presentation" identifier="goToMainScreen" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="3cK-UX-iAK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kP4-iy-Ytw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -32,29 +32,21 @@
         <scene sceneID="iak-QT-FIM">
             <objects>
                 <tableViewController id="RHm-uL-Mz5" customClass="MyTableViewController" customModule="HardVoice" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="iNa-qD-OAn">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" id="iNa-qD-OAn" userLabel="playtableview">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="I2N-4y-UQj" detailTextLabel="SG2-3s-bTq" style="IBUITableViewCellStyleSubtitle" id="vAU-2W-Z1V">
-                                <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="naF-1w-fGo" rowHeight="111" style="IBUITableViewCellStyleDefault" id="vAU-2W-Z1V">
+                                <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="111"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vAU-2W-Z1V" id="ybr-2W-qEA">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="111"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="I2N-4y-UQj">
-                                            <rect key="frame" x="20" y="7.0000000000000009" width="25" height="14.333333333333334"/>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="naF-1w-fGo">
+                                            <rect key="frame" x="20" y="0.0" width="374" height="111"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SG2-3s-bTq">
-                                            <rect key="frame" x="19.999999999999996" y="23.333333333333336" width="40.666666666666664" height="13.333333333333334"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -68,10 +60,13 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="pMV-Hz-VJK"/>
+                    <connections>
+                        <outlet property="playTableView" destination="iNa-qD-OAn" id="XlY-HS-VNf"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h6p-1k-At5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1494" y="-899"/>
+            <point key="canvasLocation" x="1483" y="-995"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -113,7 +108,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="506" y="-273"/>
+            <point key="canvasLocation" x="1483" y="-284"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="OZS-8m-rik">
@@ -609,7 +604,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ole-V2-rmU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1574" y="-1739"/>
+            <point key="canvasLocation" x="1483" y="-1833"/>
         </scene>
         <!--Help Screen Controller-->
         <scene sceneID="FmX-JJ-DII">
@@ -623,12 +618,12 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="2xY-D3-YFx"/>
+        <segue reference="yJW-Rm-wGh"/>
     </inferredMetricsTieBreakers>
     <resources>
-        <image name="ellipsis" catalog="system" width="32" height="32"/>
-        <image name="message" catalog="system" width="32" height="32"/>
-        <image name="play" catalog="system" width="32" height="32"/>
+        <image name="ellipsis" catalog="system" width="128" height="37"/>
+        <image name="message" catalog="system" width="128" height="113"/>
+        <image name="play" catalog="system" width="120" height="128"/>
         <image name="preview" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
