--- a/HardVoice/Base.lproj/Main.storyboard
+++ b/HardVoice/Base.lproj/Main.storyboard
@@ -27,90 +27,107 @@
                     </view>
                     <navigationItem key="navigationItem" id="Oym-bT-rco"/>
                     <connections>
-                        <segue destination="RHm-uL-Mz5" kind="presentation" identifier="goToMainScreen" modalPresentationStyle="fullScreen" id="den-tj-aBz"/>
+                        <segue destination="2I0-Pe-x2c" kind="presentation" identifier="goToMainScreen" modalPresentationStyle="fullScreen" id="ois-yT-I8s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kP4-iy-Ytw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="505.79710144927537" y="-995.38043478260875"/>
         </scene>
-        <!--My Table View Controller-->
-        <scene sceneID="iak-QT-FIM">
+        <!--View Controller New-->
+        <scene sceneID="hfC-ET-lbs">
             <objects>
-                <tableViewController id="RHm-uL-Mz5" customClass="MyTableViewController" customModule="HardVoice" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="10" rowHeight="64" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" id="iNa-qD-OAn" userLabel="playtableview">
+                <viewController modalPresentationStyle="fullScreen" id="2I0-Pe-x2c" customClass="ViewControllerNew" customModule="HardVoice" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CUz-SS-sKq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="Ehg-sQ-lnB">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="179"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="preview" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Atu-DX-hNr">
-                                    <rect key="frame" x="100" y="10" width="214" height="114"/>
-                                    <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="239" id="NIC-c5-nRp"/>
-                                        <constraint firstAttribute="height" constant="94" id="sIC-ih-ypw"/>
-                                    </constraints>
-                                </imageView>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k04-x5-84H">
-                                    <rect key="frame" x="183" y="154" width="48" height="31"/>
+                        <subviews>
+                            <skView contentMode="scaleToFill" asynchronous="NO" preferredFramesPerSecond="60" translatesAutoresizingMaskIntoConstraints="NO" id="BDP-RL-f2a">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                            </skView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="10" rowHeight="64" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" id="hGi-EA-agh" userLabel="playtableview">
+                                <rect key="frame" x="-1" y="0.0" width="412" height="734"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="QvC-iN-6MF">
+                                    <rect key="frame" x="0.0" y="0.0" width="412" height="179"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="preview" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i2d-BX-pal">
+                                            <rect key="frame" x="100" y="10" width="213" height="114"/>
+                                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vnJ-km-f0j">
+                                            <rect key="frame" x="182.66666666666666" y="138" width="47" height="31"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="47" id="Buv-wR-QvU"/>
+                                                <constraint firstAttribute="height" constant="31" id="rQf-y0-I5A"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
+                                            <color key="tintColor" systemColor="labelColor"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" image="message" catalog="system"/>
+                                        </button>
+                                    </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="31" id="N5i-ln-uka"/>
-                                        <constraint firstAttribute="width" constant="48" id="zxK-Ge-oCY"/>
+                                        <constraint firstAttribute="trailing" secondItem="i2d-BX-pal" secondAttribute="trailing" constant="99" id="9ju-P1-EH2"/>
+                                        <constraint firstItem="vnJ-km-f0j" firstAttribute="top" secondItem="i2d-BX-pal" secondAttribute="bottom" constant="30" id="DST-4Q-Rn3"/>
+                                        <constraint firstAttribute="bottom" secondItem="vnJ-km-f0j" secondAttribute="bottom" constant="10" id="Gts-et-nWH"/>
+                                        <constraint firstItem="i2d-BX-pal" firstAttribute="centerX" secondItem="QvC-iN-6MF" secondAttribute="centerX" id="e49-FB-yu1"/>
+                                        <constraint firstItem="i2d-BX-pal" firstAttribute="centerX" secondItem="vnJ-km-f0j" secondAttribute="centerX" id="jea-AR-S6r"/>
+                                        <constraint firstItem="i2d-BX-pal" firstAttribute="top" secondItem="QvC-iN-6MF" secondAttribute="top" constant="10" id="xEx-Ev-q5z"/>
                                     </constraints>
-                                    <color key="tintColor" systemColor="labelColor"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" image="message.fill" catalog="system"/>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstItem="k04-x5-84H" firstAttribute="top" secondItem="Atu-DX-hNr" secondAttribute="bottom" constant="50" id="Gvy-fv-LBW"/>
-                                <constraint firstItem="k04-x5-84H" firstAttribute="top" secondItem="Atu-DX-hNr" secondAttribute="bottom" constant="30" id="HBn-9K-53d"/>
-                                <constraint firstAttribute="bottom" secondItem="k04-x5-84H" secondAttribute="bottom" constant="-6" id="JHQ-vR-BpU"/>
-                                <constraint firstItem="Atu-DX-hNr" firstAttribute="top" secondItem="Ehg-sQ-lnB" secondAttribute="top" constant="10" id="PM2-GK-Oi9"/>
-                                <constraint firstItem="k04-x5-84H" firstAttribute="leading" secondItem="Ehg-sQ-lnB" secondAttribute="leading" constant="183" id="Ude-KG-YHe"/>
-                                <constraint firstAttribute="trailing" secondItem="k04-x5-84H" secondAttribute="trailing" constant="183" id="WSu-Sl-sbA"/>
-                                <constraint firstAttribute="trailing" secondItem="Atu-DX-hNr" secondAttribute="trailing" constant="100" id="c9I-Ll-Iph"/>
-                                <constraint firstItem="Atu-DX-hNr" firstAttribute="leading" secondItem="Ehg-sQ-lnB" secondAttribute="leading" constant="100" id="sn7-jS-t4i"/>
-                            </constraints>
-                        </view>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" textLabel="82f-8z-2sP" rowHeight="64" style="IBUITableViewCellStyleDefault" id="vAU-2W-Z1V">
-                                <rect key="frame" x="0.0" y="229" width="414" height="64"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vAU-2W-Z1V" id="ybr-2W-qEA">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="64"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="82f-8z-2sP">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="64"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" textLabel="hxW-fi-ka4" rowHeight="64" style="IBUITableViewCellStyleDefault" id="2GT-lD-yb6">
+                                        <rect key="frame" x="0.0" y="229" width="412" height="64"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2GT-lD-yb6" id="aSJ-MU-kXS">
+                                            <rect key="frame" x="0.0" y="0.0" width="412" height="64"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" name="ASPHALTICSCRATCHRUSBYLYAJKA" family="ASPHALTIC SCRATCH(RUS BY LYAJKA" pointSize="11"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="RHm-uL-Mz5" id="Xfi-AH-Oz3"/>
-                            <outlet property="delegate" destination="RHm-uL-Mz5" id="TEb-e5-Pxe"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="pMV-Hz-VJK"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hxW-fi-ka4">
+                                                    <rect key="frame" x="20" y="0.0" width="372" height="64"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" name="ASPHALTICSCRATCHRUSBYLYAJKA" family="ASPHALTIC SCRATCH(RUS BY LYAJKA" pointSize="11"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="2I0-Pe-x2c" id="3c2-Ay-yqC"/>
+                                    <outlet property="delegate" destination="2I0-Pe-x2c" id="mwO-A1-z5b"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="agr-EC-a1a"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="BDP-RL-f2a" firstAttribute="top" secondItem="agr-EC-a1a" secondAttribute="top" id="cMj-W3-aeZ"/>
+                            <constraint firstItem="BDP-RL-f2a" firstAttribute="bottom" secondItem="agr-EC-a1a" secondAttribute="bottom" id="jro-GZ-9T6"/>
+                            <constraint firstItem="BDP-RL-f2a" firstAttribute="leading" secondItem="agr-EC-a1a" secondAttribute="leading" id="lqj-84-qaf"/>
+                            <constraint firstItem="BDP-RL-f2a" firstAttribute="trailing" secondItem="agr-EC-a1a" secondAttribute="trailing" id="sH3-Vi-KBW"/>
+                            <constraint firstItem="BDP-RL-f2a" firstAttribute="bottom" secondItem="agr-EC-a1a" secondAttribute="bottom" id="xIh-gb-g9P"/>
+                        </constraints>
+                    </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="600" height="736"/>
                     <connections>
-                        <outlet property="playTableView" destination="iNa-qD-OAn" id="XlY-HS-VNf"/>
-                        <outlet property="previewImage" destination="Atu-DX-hNr" id="Ge8-i7-NTa"/>
+                        <outlet property="previewImage" destination="i2d-BX-pal" id="wjv-qq-bF6"/>
+                        <outlet property="skviewParticles" destination="BDP-RL-f2a" id="bKc-qL-OcA"/>
+                        <outlet property="tableOnView" destination="hGi-EA-agh" id="RmY-Ms-Mbd"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="h6p-1k-At5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="utf-10-40j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1482.608695652174" y="-995.38043478260875"/>
+            <point key="canvasLocation" x="1207" y="-995"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="OZS-8m-rik">
@@ -616,9 +633,8 @@
     <resources>
         <image name="ellipsis" catalog="system" width="128" height="37"/>
         <image name="message" catalog="system" width="128" height="116"/>
-        <image name="message.fill" catalog="system" width="128" height="114"/>
         <image name="play" catalog="system" width="117" height="128"/>
-        <image name="preview" width="250" height="250"/>
+        <image name="preview" width="500" height="500"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
